Make sure the h1 h2 h3 h4 h5 titles are visible in the main page when clicking in the TOC

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -58,6 +58,14 @@ h6 {
   font-size: $type-size-6;
 }
 
+h1::before, h2::before, h3::before, h4::before {
+  content:"";
+  display:block;
+  height: 65px;
+  margin: -65px 0 0;
+}
+
+
 small,
 .small {
   font-size: $type-size-6;
@@ -355,3 +363,4 @@ input[type="submit"],
   -webkit-transition: $global-transition;
   transition: $global-transition;
 }
+
